--- a/팝업.html
+++ b/팝업.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <style>
-        body{
+        body {
             margin: 0;
             padding: 0;
             background-color: #AAFA32;
         }
-        #box{
+
+        #box {
             position: fixed;
             top: 30%;
             left: 30%;
@@ -21,17 +23,19 @@
             box-shadow: 0.1px 0.1px 1px 1px black;
             z-index: 3001;
         }
+
         .background {
             position: fixed;
             top: 0;
             left: 0;
             right: 0;
             bottom: 0;
-            background: rgba(0,0,0,0.5);
+            background: rgba(0, 0, 0, 0.5);
             z-index: 3000;
         }
     </style>
 </head>
+
 <body>
     <button id="makeclick">open</button>
     <div id="modal" style='display: none'>
@@ -41,17 +45,16 @@
         </div>
     </div>
 
-
-
     <script>
         var btn1 = document.getElementById('makeclick');
-        btn1.onclick = function(){
+        btn1.onclick = function () {
             modal.style.display = "block";
         }
         var btn2 = document.getElementById("crashclick");
-        btn2.onclick = function(){
+        btn2.onclick = function () {
             modal.style.display = "none";
         }    
     </script>
 </body>
+
 </html>
