--- a/팝업.html
+++ b/팝업.html
@@ -11,40 +11,46 @@
             padding: 0;
             background-color: #AAFA32;
         }
-
         #box{
-            position: absolute;
+            position: fixed;
             top: 30%;
             left: 30%;
             width: 700px;
             height: 300px;
             background-color: white;
             box-shadow: 0.1px 0.1px 1px 1px black;
-            display: none;
+            z-index: 3001;
+        }
+        .background {
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: rgba(0,0,0,0.5);
+            z-index: 3000;
         }
     </style>
 </head>
 <body>
     <button id="makeclick">open</button>
-
-    <div id="box">
-        <button id="crashclick">close</button>
+    <div id="modal" style='display: none'>
+        <div class="background"></div>
+        <div id="box">
+            <button id="crashclick">close</button>
+        </div>
     </div>
-
-
 
 
     <script>
         var btn1 = document.getElementById('makeclick');
         btn1.onclick = function(){
-            box.style.display = "block";
+            modal.style.display = "block";
         }
         var btn2 = document.getElementById("crashclick");
         btn2.onclick = function(){
-            box.style.display = "none";
+            modal.style.display = "none";
         }    
-
-
     </script>
 </body>
 </html>
